   * Added basic mask creation ("diff") feature
 * Graphics:
   * New or updated unit frames: Troll Shaman, Naga Fighter.
   * New idle animations: Deathblade, Orcish Assassin.
   * Fixed some parts of alternative flag sets which were not correctly
     team colored.
 * Help menu:
   * ability upgrades for max-level advancements are now listed (bug #10337)
 * Language and i18n:
   * updated translations: Catalan, Czech, Danish, Finnish, Galician, German,
     Hungarian, Italian, Lithuanian, Racv, Slovak, Turkish
   * new translations: Valencian (the previous non-standard translation has
     been renamed to RACV).
   * Fixed Wesnoth looking for editor translations in the wrong place
     (bug #12426)
   * updated DejaVuSans to 2.27
 * Multiplayer:
   * New multiplayer map: 4p Underworld.
 * Music and sound effects:
   * Changed sound sources' default fade and full volume ranges to 3 and 14
     hexes respectively; the former defaults were less than adequate.
   * Renamed music files:
     * nr-sad.ogg -> sad.ogg
     * main_menu.ogg -> transience.ogg
     * main_menu_new.ogg -> main_menu.ogg
 * Units:
   * Balancing changes:
     * Gave the Goblin Pillager the same bite attack as the Wolf Rider.
   * New units: Dread Bat, Royal Warrior (character)
 * User interface:
   * Story parts that have show_title=yes and text at the same time have
     now the text's background drawn.
   * The new widget library now also supports closing a dialog with a mouse
     click without a close button.
   * The new widget library now has rudimentary support for wrapping long
     texts.
   * Added experimental support to show the new style dialogs when units
     talk in game. (Only available when starting with --new-widgets.)
 * WML engine:
   * Added "border" parameter to [terrain_mask] that overlays on the border
     in addition to the playable map area. The used mask must have the same
     border_size as the map (i.e. currently 1), else this will be ignored.